clapi_macros/test_suite/tests/ui/fail/invalid_option_value/invalid_option_alias.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_alias.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `alias` is expected to be string literal
